# macro_lightning

./: .gitignore  .gitmodules  .travis.yml  CHANGES.rst  Lightning_paper_constraints_and_projections.ipynb  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
doc/: Macro Lightning.bib
docs/: conf.py  credits.rst  index.rst
docs/_static/: favicon.pxm  macro_lightning.css
docs/documentation/: code_quality.rst  installation.rst  testing.rst
docs/examples/: plotting_constraints.ipynb
docs/macro_lightning/: data.rst  index.rst  misc.rst  parameters.rst  physics.rst  plot.rst  scripts.rst  utils.rst
docs/whatsnew/: 1.0.rst  index.rst
licenses/: LICENSE.rst
macro_lightning/: __init__.py  _astropy_init.py  misc.py  parameters.py  physics.py  plot.py  utils.py
macro_lightning/data/: __init__.py  dfn_constraints.ecsv  dfn_future_constraints.ecsv  humandeath_constraints.ecsv  humanmass.txt  mica_polygon.txt  superbursts1_polygon.txt  superbursts_polygon.txt  whitedwarf_polygon.txt
macro_lightning/tests/: __init__.py  test_parameters.py  test_plot.py  test_utils.py
notebooks/: Basic Jupiter Flux Calculation.nb  Lightning_paper_constraints_and_projections.ipynb  maxwell_fraction.nb
reference/: bibliography.bib
references/: references.bib
src/: __init__.py  plot.py
