[metadata]
name = macro_lightning
author = Nathaniel Starkman, Jagjit Sidhu
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://macro_lightning.readthedocs.io
description = Constraining Macro Dark Matter Models with Lightning.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/macro_lightning

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    matplotlib
    numpy
    pytest
    scipy
    tqdm
    typing_extensions
    utilipy

[options.extras_require]
test =
    pytest-astropy
    pytest-mpl
docs =
    sphinx-astropy
    nbsphinx
    jupyter_client
    sphinxcontrib-bibtex


[options.package_data]
macro_lightning = data/*

[tool:pytest]
minversion = 3.6
testpaths = "macro_lightning" "docs"
norecursedirs = */macro_lightning/extern/*
astropy_header = false
text_file_format = rst
doctest_plus = enabled
doctest_norecursedirs=*/macro_lightning/extern/*
addopts = --doctest-rst

[coverage:run]
omit =
    macro_lightning/_astropy_init*
    macro_lightning/conftest.py
    macro_lightning/*setup_package*
    macro_lightning/tests/*
    macro_lightning/*/tests/*
    macro_lightning/extern/*
    macro_lightning/version*
    */macro_lightning/_astropy_init*
    */macro_lightning/conftest.py
    */macro_lightning/*setup_package*
    */macro_lightning/tests/*
    */macro_lightning/*/tests/*
    */macro_lightning/extern/*
    */macro_lightning/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
